# Metaballs

./: .gitignore  .gitmodules  .main.cpp.swp  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  main.cpp  sbuild.sh  srun.sh
_install/: Metaballs
include/: .application.hpp.swp  application.hpp  gl_utils.hpp  shader.hpp
include/glad/: glad.h
res/shaders/: hello_triangle_frag.glsl  hello_triangle_vert.glsl
src/: .shader.cpp.swp  CMakeLists.txt  application.cpp  gl_utils.cpp  glad.c  shader.cpp
